--- a/day14/exam9_memo/exam9.vcxproj.filters
+++ b/day14/exam9_memo/exam9.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="exam9.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\engine\utils.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="exam9.rc">
