--- a/day19/exam3/exam3.vcxproj.filters
+++ b/day19/exam3/exam3.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="..\..\cJSON\cJSON.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="test.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="test.json" />
