--- a/비행기/exam3/exam3.vcxproj.filters
+++ b/비행기/exam3/exam3.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="enemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\engine\plusEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\engine\plusEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
